Thu Jan 29 12:59:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/mpc-mode.el:
          Added patch from Stefan Naewe <stefan.naewe@googlemail.com>

Thu Jan 29 10:33:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ATM_Acceptor.cpp:
        * ace/ATM_QoS.cpp:
        * ace/ATM_Stream.cpp:
        * ace/ATM_Stream.inl:
        * ace/OS_NS_Thread.inl:
        * ace/OS_NS_unistd.inl:
        * ace/OS_NS_wchar.cpp:
          Don't use () when returning 0 or -1

Wed Jan 28 20:22:45 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/ciao_tests.lst:
        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:

          Removed these files.  They have moved to the TAO and CIAO bin
          directories.  This resolves bug 2748.

        * bin/auto_run_tests.pl:
        * bin/fuzz.pl:

          Updated due to the new locations of the lst files.

Wed Jan 28 15:02:11 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Message_Queue_T.cpp:

          Fixed typo in ACE_NEW_RETURN argument list.

Wed Jan 28 10:24:46 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added new test for bug 3559.

Wed Jan 28 09:45:53 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3541_Regression.cpp:
          Fixed last compile error

        * tests/Multicast_Test.cpp:
          Unicode fix

        * tests/Thread_Pool_Reactor_Resume_Test.cpp:
          Unicode fix

Wed Jan 28 09:09:53 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_arpa_inet.inl:
          Use new ACE_HAS_NONCONST_INET_ADDR

        * ace/config-cray.h:
        * ace/config-lynxos.h:
        * ace/config-tandem.h:
        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          Added ACE_HAS_NONCONST_INET_ADDR

        * ace/config-vxworks6.7.h: